followers by seller implemented